--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ logs/*
 d2bs/d2bs.log
 d2bs/kolton/data
 /d2bs/d2bs.ini
+/d2bs/kolbot/config/
+!/d2bs/kolbot/config/_CustomConfig.js
+!/d2bs/kolbot/config/Scripts.txt
+!/d2bs/kolbot/config/AutoConfig.js
