--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@ logs/*
 
 .idea
 d2bs/d2bs.log
-d2bs/kolton/data
-/d2bs/d2bs.ini
-/d2bs/kolbot/config/
+d2bs/d2bs.ini
+d2bs/kolbot/data/*
+d2bs/kolbot/logs/*
+d2bs/kolbot/pickit/*
+d2bs/kolbot/config/*
 !/d2bs/kolbot/config/Example.js
 !/d2bs/kolbot/config/_CustomConfig.js
 !/d2bs/kolbot/config/Scripts.txt
